[gd_scene load_steps=7 format=3 uid="uid://xuvnhtg7ox3i"]

[ext_resource type="Script" uid="uid://drh5o3ouklefg" path="res://scripts/game_management/main_menu/main_menu.gd" id="1_f6d7l"]
[ext_resource type="PackedScene" uid="uid://deidkuj34u7yu" path="res://scenes/game_management/main_menu/level_1_main_menu_scene.tscn" id="4_c83o0"]
[ext_resource type="Script" uid="uid://b8rggvq7ih7ew" path="res://scripts/game_management/main_menu/new_game.gd" id="11_jf6cj"]

[sub_resource type="Animation" id="Animation_uqeha"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenuUI/GridContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ob46e"]
resource_name = "StartUp"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainMenuUI/GridContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.06667, 5.07664),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wem23"]
_data = {
&"RESET": SubResource("Animation_uqeha"),
&"StartUp": SubResource("Animation_ob46e")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_f6d7l")

[node name="Level1MainMenuScene" parent="." instance=ExtResource("4_c83o0")]

[node name="MainMenuUI" type="CanvasLayer" parent="."]

[node name="GridContainer" type="GridContainer" parent="MainMenuUI"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.285
anchor_top = 0.306
anchor_right = 0.716
anchor_bottom = 0.639
offset_left = 0.799927
offset_top = 0.519989
offset_right = -0.720093
offset_bottom = -0.120056
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GameName" type="Label" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 128
text = "Project Futbo"

[node name="NewGame" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = "  New Game  "
script = ExtResource("11_jf6cj")

[node name="Prototype" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = " Game Loop Prototype "

[node name="DroneControls" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = " Drone Controls "

[node name="Quit" type="Button" parent="MainMenuUI/GridContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 36
text = "  Quit  "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wem23")
}

[connection signal="pressed" from="MainMenuUI/GridContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MainMenuUI/GridContainer/Prototype" to="." method="_on_prototype_pressed"]
[connection signal="pressed" from="MainMenuUI/GridContainer/DroneControls" to="." method="_on_drone_controls_pressed"]
[connection signal="pressed" from="MainMenuUI/GridContainer/Quit" to="." method="_on_exit_pressed"]
